Fix possible ArrayIndexOutOfBoundsException in InspectorInfo
InspectorInfo used to be an ApplicationScoped bean with a SHA256 digest.
This digest was therefore shared for the whole application and used in
parallel. But MessageDigest is not thread safe which may lead to AIOOBE.

Now each UiSession gets its own InspectorInfo instance with its own
MessageDigest. This is fine as requests of a single UiSession are never
processed in parallel (see UiSession.processJsonRequest and
JsonMessageRequestHandler.handleJsonRequest).

443078